Refactor Stream.java to propagate checked exceptions from a wrapped Stream.

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 subprojects {
+  repositories {
+    mavenCentral()
+  }
   gradle.projectsEvaluated {
     tasks.withType(JavaCompile) {
       options.compilerArgs << "-Xlint:all"
